fix: text overflow ellipsis in outline panel #20

--- a/snippets/plugins/calendar.scss
+++ b/snippets/plugins/calendar.scss
@@ -57,6 +57,8 @@ body.calendar-swap-year-month #calendar-container .nav {
 
   .nav {
     padding: 0;
+    margin-bottom: var(--size-4-2);
+    padding-left: var(--size-4-1);
   }
 
   .day {
@@ -112,4 +114,5 @@ body.calendar-weekend #calendar-container {
 
 .workspace-leaf-content[data-type=calendar] .view-content {
   padding-inline: var(--size-4-1);
+  padding-block: 0;
 }
